--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-# Created by .ignore support plugin (hsz.mobi)
+lib
+node_modules
+*.log
+.idea
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+demo/node_modules
+
+# testing
+demo/coverage
+
+# production
+demo/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+/.nyc_output/
+coverage/
+/coverage/
