--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
+    "babel-eslint": "^8.1.1",
     "babel-cli": "^6.26.0",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
@@ -62,53 +63,23 @@
     "cross-env": "2.0.0",
     "css-loader": "0.23.1",
     "enzyme": "2.4.1",
-    "eslint": "3.2.2",
-    "eslint-config-kentcdodds": "^9.0.2",
+    "eslint": "^4.17.0",
+    "eslint-plugin-react": "^7.6.1",
     "file-loader": "0.9.0",
     "history": "^3.0.0",
     "http-server": "0.9.0",
     "jsdom": "9.4.1",
-    "lodash": "4.14.2",
-    "mocha": "3.0.2",
     "nib": "^1.1.2",
     "npm-run-all": "2.3.0",
-    "nyc": "7.1.0",
     "react": "15.3.0",
     "react-addons-test-utils": "15.3.0",
     "react-dom": "15.3.0",
-    "react-router": "2.6.1",
     "react-select": "^1.0.0-rc.10",
-    "sinon": "1.17.5",
-    "sinon-chai": "2.8.0",
-    "starwars-names": "1.6.0",
     "style-loader": "^0.13.0",
     "stylus-loader": "^3.0.1",
     "webpack": "2.1.0-beta.20",
     "webpack-config-utils": "2.0.0",
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-validator": "2.2.7"
-  },
-  "nyc": {
-    "all": true,
-    "check-coverage": true,
-    "branches": 100,
-    "function": 100,
-    "lines": 100,
-    "statements": 100,
-    "reporter": [
-      "text",
-      "lcov"
-    ],
-    "exclude": [
-      "**/*.(test|stub).js",
-      "**/helpers/**",
-      "**/fixtures/**",
-      "**/build/**"
-    ],
-    "sourceMap": false,
-    "instrument": false,
-    "require": [
-      "babel-register"
-    ]
   }
 }
