--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
     "test": "cross-env NODE_ENV=test nyc mocha",
+    "test-jest": "jest",
     "watch:test": "mocha --watch --compilers js:babel-register",
     "start": "http-server",
     "setup": "npm install && npm run validate",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/ModulUI/inputs#readme",
   "dependencies": {
+    "jest": "^22.3.0",
     "mobx": "^3.0.0",
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
@@ -81,5 +83,18 @@
     "webpack-config-utils": "2.0.0",
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-validator": "2.2.7"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src/"
+    ],
+    "setupFiles": [
+      "./tests/jestsetup.js"
+    ]
   }
 }
