--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mobx-form",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "",
   "main": "./lib",
   "module": "./src",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ModulUI/inputs.git"
+    "url": "git+https://github.com/ModulUI/common-mobx-form"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ModulUI/common-mobx-form/issues"
   },
-  "homepage": "https://github.com/ModulUI/inputs#readme",
+  "homepage": "https://github.com/ModulUI/common-mobx-form#readme",
   "dependencies": {
     "mobx": "^3.0.0",
     "mobx-react": "^4.1.0",
