--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mobx-form",
-  "version": "0.0.27",
+  "version": "0.1.27",
   "description": "",
   "main": "./lib",
   "module": "./src",
@@ -22,18 +22,19 @@
   "homepage": "https://github.com/ModulUI/common-mobx-form#readme",
   "dependencies": {
     "jest": "^22.3.0",
-    "mobx": "^3.0.0",
-    "mobx-react": "^4.1.0",
-    "mobx-react-devtools": "^4.2.11",
-    "mobx-react-form": "^1.32.2",
-    "mobx-react-form-devtools": "^1.7.2",
-    "mobx-utils": "^3.2.1",
-    "modul-helpers": "^0.1.103",
+    "mobx": "^5.5.2",
+    "mobx-react": "^5.3.6",
+    "mobx-react-devtools": "^5.0.1",
+    "mobx-react-form": "^1.35.1",
+    "mobx-react-form-devtools": "^1.10.0",
+    "mobx-utils": "^5.0.4",
+    "modul-helpers": "^0.1.106",
     "modul-components": "^0.0.58",
-    "prop-types": "^15.5.9",
-    "react": "15.3.0",
-    "react-dom": "15.3.0",
-    "react-input-mask": "^2.0.3"
+    "modul-ui": "^0.0.14",
+    "prop-types": "^15.6.2",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "react-input-mask": "^2.0.4"
   },
   "peerDependencies": {
     "react": "^0.14.9 || ^15.3.0 || ^16.0.0-rc || ^16.0",
@@ -42,23 +43,25 @@
   "devDependencies": {
     "babel-eslint": "^8.1.1",
     "babel-cli": "^6.26.0",
-    "babel-core": "6.13.2",
+    "babel-core": "6.26.3",
     "babel-loader": "6.2.4",
     "babel-plugin-istanbul": "1.0.3",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "6.13.2",
-    "babel-preset-react": "6.11.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "6.11.6",
-    "eslint": "^4.17.0",
-    "eslint-plugin-react": "^7.6.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "6.26.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2"
   },
   "jest": {
     "moduleFileExtensions": [
