--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mobx-form",
-  "version": "0.1.27",
+  "version": "1.0.0",
   "description": "",
   "main": "./lib",
   "module": "./src",
@@ -25,12 +25,12 @@
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
-    "mobx-react-form": "^1.35.1",
+    "mobx-react-form": "1.35.1",
     "mobx-react-form-devtools": "^1.10.0",
     "mobx-utils": "^5.1.0",
     "modul-helpers": "^0.1.106",
-    "modul-components": "^0.0.80",
-    "modul-ui": "^0.0.25",
+    "modul-components": "^0.0.81",
+    "modul-ui": "^0.0.26",
     "prop-types": "^15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
