--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mobx-form",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "description": "",
   "main": "./lib",
   "module": "./src",
@@ -25,7 +25,7 @@
     "mobx": "^3.0.0",
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
-    "mobx-react-form": "^1.32.2",
+    "mobx-react-form": "1.35.1",
     "mobx-react-form-devtools": "^1.7.2",
     "mobx-utils": "^3.2.1",
     "modul-helpers": "^0.1.103",
