--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
-    "mobx-react-form": "^1.35.2",
+    "mobx-react-form": "1.35.1",
     "mobx-react-form-devtools": "^1.10.0",
     "mobx-utils": "^5.1.0",
     "modul-helpers": "^0.1.106",
