Апдейт версий пакетов

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mobx-form",
-  "version": "1.0.6",
+  "version": "1.0.7-beta",
   "description": "",
   "main": "./lib",
   "module": "./src",
@@ -21,19 +21,19 @@
   },
   "homepage": "https://github.com/ModulUI/common-mobx-form#readme",
   "dependencies": {
-    "jest": "^24.7.1",
-    "mobx": "^5.9.4",
-    "mobx-react": "^5.4.3",
+    "jest": "^24.9.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "mobx-react-devtools": "^6.1.1",
-    "mobx-react-form": "^2.0.2",
+    "mobx-react-form": "^2.0.4",
     "mobx-react-form-devtools": "^1.11.1",
-    "mobx-utils": "^5.1.0",
+    "mobx-utils": "^5.4.1",
     "modul-components": "^0.0.82",
-    "modul-helpers": "^0.1.106",
-    "modul-ui": "^0.0.41",
+    "modul-helpers": "^0.1.108",
+    "modul-ui": "^0.0.52",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-input-mask": "^2.0.4"
   },
   "peerDependencies": {
